# web_prototype

./: .gitignore  Cargo.toml  README.md
framework/: Cargo.toml
framework/derive/: Cargo.toml
framework/derive/src/: lib.rs
framework/derive/src/page/: field.rs  mod.rs
framework/src/: lib.rs
framework/static/: script.js
src/: main.rs  vms.rs
