[workspace]
members = [
    "framework",
    "framework/derive"
]

[package]
name = "web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
framework = { path = "framework" }
regex = "1.6.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
uptime_lib = "0.2.2"
