[package]
name = "framework"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
derive = { path = "derive" }
serde = { version = "1.0.140", default-features = false }
serde_json = "1.0.82"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
